* patches/any/local-sunrpc-dos.diff: fix a DoS in RPC implementation     (CVE-2011-4609).  Closes: #671478.
svn path=/glibc-package/trunk/; revision=5265

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,8 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
     getpwuid/nsswitch.c.  Closes: #674072.
   * patches/localedata/submitted-es_MX-decimal_point.diff: fix
     decimal_point and thousands_sep.  Closes: #673339.
+  * patches/any/local-sunrpc-dos.diff: fix a DoS in RPC implementation
+    (CVE-2011-4609).  Closes: #671478.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
