* Add patches/any/cvs-ld.so-rpath-origin.diff to fix an insecure handling     of privileged programs' RPATHs with $ORIGIN (CVE-2011-1658).  Closes:     #672119.
svn path=/glibc-package/trunk/; revision=5277

--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,9 @@ eglibc (2.13-33) UNRELEASED; urgency=medium
   * Set libc*-dev "Multi-Arch: same". Add conflicts betwwen libc*-dev
     packages. Move a.out.h and ieee754.h to the arch qualified path.
     Thanks to Thibaut Girka for the help.  Closes: #666760.
+  * Add patches/any/cvs-ld.so-rpath-origin.diff to fix an insecure handling
+    of privileged programs' RPATHs with $ORIGIN (CVE-2011-1658).  Closes:
+    #672119.
 
  -- Clint Adams <clint@debian.org>  Fri, 04 May 2012 23:39:00 -0400
 
