* patches/any/cvs-vfprintf-positional.diff: new patch from upstream to     fix a stack corruption in vfprintf with positional parameters     (CVE-2012-3404). patches/any/cvs-vfprintf-many-format-strings.diff: new     patch from upstream to fix a FORTIFY_SOURCE format string protection     bypass (CVE-2012-3405).  Closes: #681473.
svn path=/glibc-package/trunk/; revision=5305

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,11 @@ eglibc (2.13-35) UNRELEASED; urgency=low
   * Update Czech debconf translation, by Miroslav Kure.  Closes: #681708.
   * local/manpages/ld.so.8: fix LD_VERBOSE description after manpage
     rework.  Closes: #681688.
+  * patches/any/cvs-vfprintf-positional.diff: new patch from upstream to
+    fix a stack corruption in vfprintf with positional parameters 
+    (CVE-2012-3404). patches/any/cvs-vfprintf-many-format-strings.diff: new
+    patch from upstream to fix a FORTIFY_SOURCE format string protection
+    bypass (CVE-2012-3405).  Closes: #681473.
 
   [ Petr Salinger ]
   * fixup kfreebsd/local-use-thr-primitives.diff. Closes: #681113.
