--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     define MUTEX_INITIALIZER.
   * Japanese debconf translation update from Nobuhiro Iwamatsu.
     closes: #695077.
+  * patches/any/cvs-getaddrinfo-stack-overflow.diff: New patch to fix
+    a stack overflow in getaddrinfo(), CVE-2013-1914. Closes: #704623.
   
   [ Petr Salinger ]
   * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
