debian/patches/any/cvs-regexp-overrun.diff: Backport patch from git to resolve regex matcher overrun, CVE-2013-0242 (Closes: #699399)
svn path=/glibc-package/trunk/; revision=5566

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     another unconditional O_CLOEXEC and conditionalize it for freebsd.
   * debian/patches/kfreebsd/local-HAVE_TLS_SUPPORT.diff: Removed, as
     this is no longer needed by the updated glibc-bsd sysdeps upstream.
+  * debian/patches/any/cvs-regexp-overrun.diff: Backport patch from git
+    to resolve regex matcher overrun, CVE-2013-0242 (Closes: #699399)
 
   [ Aurelien Jarno ]
   * patches/any/cvs-sys-param-h-DEV_BSIZE.diff: New patch to fix
