drop kfreebsd/local-readdir_r.diff, obsoleted by fix for CVE-2013-4237.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5786

--- a/debian/changelog
+++ b/debian/changelog
@@ -106,6 +106,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * drop obsolete kfreebsd/local-dosavesse.diff, local-pthread_at_fork.diff,
     kfreebsd/local-nosavesse.diff, kfreebsd/local-use-thr-primitives.diff,
     and kfreebsd/submitted-libc_once.diff.
+  * drop kfreebsd/local-readdir_r.diff, obsoleted by fix for CVE-2013-4237.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
