patches/any/cvs-CVE-2013-4458-getaddrinfo.diff: new patch from upstream to fix stack (frame) overflow in getaddrinfo() when called with AF_INET6 / CVE-2013-4458 (Closes: #727181).
svn path=/glibc-package/branches/eglibc-2.18/; revision=5816

--- a/debian/changelog
+++ b/debian/changelog
@@ -140,6 +140,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/any/cvs-strcasecmp-locales.diff: new patch from upstream to
     fix mismatch between strcasecmp and toupper/tolower in tr_TR.iso88599
     locale (Closes: #716775).
+  * patches/any/cvs-CVE-2013-4458-getaddrinfo.diff: new patch from upstream
+    to fix stack (frame) overflow in getaddrinfo() when called with AF_INET6
+    / CVE-2013-4458 (Closes: #727181).
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
