--- a/debian/changelog
+++ b/debian/changelog
@@ -179,6 +179,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     included in -O2.
   * Replace patches/any/submitted-findlocale-div-by-zero.diff by upstream
     version patches/any/cvs-findlocale-div-by-zero.diff.
+  * patches/any/cvs-CVE-2013-4332-memalign-2.diff: patch from upstream to
+    address some remaining issues from CVE-2013-4332.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
